# swimmers

./: .gitignore  Cargo.toml  LICENSE  readme.md  rustfmt.toml
src/: awareness.rs  consts.rs  handle.rs  lib.rs  node.rs  node_set.rs  ping.rs  suspicions.rs
src/client/: config.rs  event.rs  mod.rs
src/scheduler/: interval.rs  mod.rs  ping.rs  suspicion.rs  timer.rs
